<resources>
    <string name="app_name">Go Bus</string>
    <string name="registrer">Registrarse</string>
    <string name="registrar">Registrar</string>
    <string name="login">Iniciar Sesion</string>
    <string name="password">Contraseña</string>
    <string name="username">Usuario</string>
    <string name="txtUrBus">UrBus</string>
    <string name="logo">TODO</string>
    <string name="sing_up">Sing Up</string>
    <string name="btn_sing_up">Sing Up</string>
    <string name="name">Name</string>
    <string name="have_account">Si ya tienes una cuenta. Inicia Sesion</string>
    <string name="welcome">Bienvenido</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="id">Id</string>
    <string name="nameli">Nombre</string>
    <string name="email">Correo Electrónico</string>
    <string name="userimage">userImage</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="borrar_cuenta">Borrar Cuenta</string>
    <string name="addProduct">Añadir Producto</string>
    <string name="add">Añadir</string>
    <string name="nameProduct">Nombre: </string>
    <string name="priceProduct">Precio: </string>
    <string name="descriptionProduct">Descripción: </string>
    <string name="idProduct">Id: </string>
    <string name="listProduct">Lista de Productos</string>
    <string name="list_products">Lista de Productos</string>
    <string name="all_Products">Contactenos</string>
    <string name="supermarket">Supermercado</string>
    <string name="description">Ubicación obtenida de la Base de Datos</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="discount_Product">Descuento: </string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="menu_perfil">1</string>
    <string name="menu_addProduct">Añadir Producto</string>
    <string name="menu_listProduct">Lista de Productos</string>
    <string name="menu_contact">Contactenos</string>
    <string name="menu_deleteAccount">Borrar Cuenta</string>
    <string name="menu_logOut">Salir</string>
    <string name="letters_mayus">Letras mayúsculas</string>
    <string name="words_min">Letras minúsculas</string>
    <string name="first_words_Uppercase">Primeras en mayúsculas</string>
    <string name="btn_add_product">Añadir a la lista de compras</string>
    <string name="see_list_personalized">Ver lista personalizada</string>
    <string name="btn_add_image">Añadir Imagen</string>
    <string name="edit_product">Editar Producto</string>
    <string name="update_data">Actualizar datos</string>
    <string name="edit_image">Editar Imagen</string>
    <string name="delete_image">Eliminar Imagen</string>
    <string name="delete_Product">Eliminar Producto</string>

    <string name="send_email">Enviar Correo Con el resumen de la lista</string>
    <string name="img_product_desc">imagen del producto</string>
    <string name="seleccione_origen">Seleccione origen</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="marcar_ubicacion">Marcar Ubicacion</string>
    <string name="fijar_origen">Fijar Origen</string>
    <string name="seleccionar_destino">Seleccionar Destino</string>
    <string name="fijar_destino">Fijar Destino</string>
    <string name="calle_principal_y_calle_secundaria">(Calle Principal y Calle Secundaria)</string>
    <string name="update_user">Editar Usuario</string>
    <string name="update_User">Actualizar Usuario</string>
    <string name="contrase_a_nueva">Contraseña Nueva</string>
    <string name="repita_contrase_a_nueva">Repita Contraseña Nueva</string>
    <string name="contrase_a_antigua">Contraseña Antigua</string>
    <string name="facebook_app_id">157435807374666</string>

</resources>