<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".UpdateUser">

    <EditText
        android:id="@+id/txt_password_user_update_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="#EC1C54"
        android:drawableEnd="@drawable/lock"
        android:ems="10"
        android:hint="@string/contrase_a_nueva"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password_user_update"
        tools:text="@string/password" />

    <EditText
        android:id="@+id/txt_password_user_update_new_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="#EC1C54"
        android:drawableEnd="@drawable/lock"
        android:ems="10"
        android:hint="@string/repita_contrase_a_nueva"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password_user_update_new"
        tools:text="@string/password" />

    <TextView
        android:id="@+id/lblUpdateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:text="@string/update_user"
        android:textAlignment="center"
        android:textColor="#EC1C54"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_email_User_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="#EC1C54"
        android:drawableEnd="@drawable/mail"
        android:ems="10"
        android:hint="@string/correo_electr_nico"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:text="Email" />

    <EditText
        android:id="@+id/txt_name_user_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="#EC1C54"
        android:drawableEnd="@drawable/user"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email_User_update"
        tools:text="@string/username" />

    <EditText
        android:id="@+id/txt_password_user_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="#EC1C54"
        android:drawableEnd="@drawable/lock"
        android:ems="10"
        android:hint="@string/contrase_a_antigua"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_user_update"
        tools:text="@string/password" />

    <Button
        android:id="@+id/btn_update_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_rounded"
        android:text="@string/update_User"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password_user_update_new_2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUpdateUser"
        app:srcCompat="@drawable/usuario" />

</androidx.constraintlayout.widget.ConstraintLayout>